--- a/[00]content/[09] 구현 핵심.md
+++ b/[00]content/[09] 구현 핵심.md
@@ -2,6 +2,7 @@
 - - -
 ### 목차
 [001.투포인터](#투포인터)
+
 [002.백트래킹](#백트래킹)
 - - -
 
@@ -144,11 +145,65 @@ https://hellominchan.tistory.com/176
     (체스판에 직접 인덱스를 매겨서 더해보시면 이해가 쉽습니다. ex) (0,2) = (1,1) = (2,0) )
 ```
 
+<br >
+
+- - -
+
+##[G4]2638-치즈
+ - 공기와 2면 이상 닿은 치즈가 녹는다 했을 때 다 녹기까지의 시간을 체크하는 문제
+
+<br >
+
+#### 0) 치즈 순회하면서 3 이상인 부분을 녹일 때 꼭 BFS로 순회하려고 하지 않아도 된다.
+#### 0-1) 기존 생각은 BFS로 돌면서 visited로 방문체크하려고 했는데 visited가 2개 만들어지기 때문에
+#### 0-2) 어떻게 처리할 지 곤란했었다, 하지만 그냥 체크하는경우 bool값 만들고 for문으로 순회해도 간단히 가능하다.
+
+```python
+# 치즈를 순회하면서 3 이상인 부분은 녹인다. ( 처음값이 1이고 공기 2번 접하면 3이 됨)
+def cheese():
+    is_melted = False
+
+    for x in range(N):
+        for y in range(M):
+            if graph[x][y] >= 3:
+                graph[x][y] = 0
+                is_melted = True
+            elif graph[x][y] == 2:  # 2인 부분은 녹일 수 없으므로 다시 1로 초기화
+                graph[x][y] = 1
+
+    return is_melted
+```
+
+<br >
+
+- - -
+
+##[Lv3]하노이의 탑
+ - 하노이의 탑은 https://stricky.tistory.com/155 참고
+ - 재귀는 반드시 순환부, 종료부로 구성된다는 점
+
+<br >
+
+```python
+def hanoi(n, at, to, aux):
+    if n == 1:
+        answer.append([at, to])
+        return
+
+    # 원반 n-1개를 보조기둥(2번)으로 이동
+    hanoi(n - 1, at, aux, to)
+
+    # 가장 큰 원반은 3번 기둥 (목적지)로 이동
+    answer.append([at, to])
+
+    # 나머지 보조기둥(2번) -> 목적지(3번) 이동
+    hanoi(n - 1, aux, to, at)
 
 
+def solution(n):
+    hanoi(n, 1, 3, 2)
+```
 
+<br >
 
-
-
-
-
+- - -
