--- a/[00]content/[09] 구현 핵심.md
+++ b/[00]content/[09] 구현 핵심.md
@@ -207,3 +207,40 @@ def solution(n):
 <br >
 
 - - -
+
+##[G4]내리막 길
+ - DFS와 DP를 함께 사용한 예제
+ - DP 길찾기의 경우 뒤에서부터 찾는 방법도 접근방법 중 하나
+ - DP값이 -1이면 미방문, 0이면 방문했지만 방법이 없음, N이면 N개의 길이 있음을 의미
+ - [https://seoyoung2.github.io/algorithm/2020/06/25/Baekjoon-1520.html]
+
+<br >
+
+```python
+# 1)
+dp = [[-1] * N for _ in range(M)]
+
+def dfs(x, y):
+    # 2-1)
+    if x == 0 and y == 0:
+        return 1
+
+    if dp[x][y] == -1:
+        dp[x][y] = 0
+        for d in range(4):
+            nx = x + dx[d]
+            ny = y + dy[d]
+
+            if 0 <= nx < M and 0 <= ny < N:
+                if graph[x][y] < graph[nx][ny]:
+                    dp[x][y] += dfs(nx, ny)
+    return dp[x][y]
+
+
+print(dfs(M - 1, N - 1))
+
+```
+
+<br >
+
+- - -
