[2022-04-19] 프로그래머스 Lv1, Lv2

--- a/[--]문제집 풀이/[09]수학/[09]수학-문제핵심정리.md
+++ b/[--]문제집 풀이/[09]수학/[09]수학-문제핵심정리.md
@@ -127,3 +127,15 @@ def getMyDivisor(n):
 
     return divisorsList
 ```
+
+<br />
+
+## 좌표 계산하기
+```python
+# 좌표 거리 계산해주기
+for a, b, c in zip(L_pos, R_pos, now):
+    L_dist += abs(a - c)
+    R_dist += abs(b - c)
+
+# now와 L, R 사이의 거리를 구하는 계산식
+```
