--- a/[--]문제집 풀이/[09]수학/[09]수학-문제핵심정리.md
+++ b/[--]문제집 풀이/[09]수학/[09]수학-문제핵심정리.md
@@ -120,7 +120,7 @@ def getMyDivisor(n):
             divisorsList.append(i)
             # 약수 i와 이를 나누는 n // i
             # 5 * 5 = 25 같은 경우도 있으므로 중복된 경우가 아닌 경우만 넣어줌
-            if i != (n//i):   
+            if i != (n // i):
                 divisorsList.append(n // i)
 
     divisorsList.sort()
@@ -131,6 +131,7 @@ def getMyDivisor(n):
 <br />
 
 ## 좌표 계산하기
+
 ```python
 # 좌표 거리 계산해주기
 for a, b, c in zip(L_pos, R_pos, now):
@@ -138,4 +139,55 @@ for a, b, c in zip(L_pos, R_pos, now):
     R_dist += abs(b - c)
 
 # now와 L, R 사이의 거리를 구하는 계산식
+```
+
+<br />
+
+## 다중집합의 합집합과 교집합
+
+```markdown
+a = [1,2,2,3,4,5]
+b = [1,1,2,3,4,6]
+
+일반 집합의 합집합: [1,2,3,4,5,6]
+일반 집합의 교집합: [1,2,3,4]
+
+다중 집합의 합집합: [1,1,2,2,3,4,5,6]
+다중 집합의 교집합: [1,2,3,4]
+```
+
+```python
+# 다중집합에는 일반 집합과 다르게 중복원소가 존재한다.
+# 따라서 set 자료형이 아닌 list 자료형을 사용해야 한다. 
+
+# =====> 다중집합의 합집합
+a = [1, 2, 2, 3, 4, 5]
+b = [1, 1, 2, 3, 4, 6]
+
+# A + B - A교B = 합집합이다.
+a_temp = a.copy()  # 다 처리하면 차집합 A-B만 남게됨  
+a_result = a.copy() #  다 처리하면 B-A요소가 들어가져서 A + B가 완성됨
+
+for i in b:
+    if i not in a_temp:
+        a_result.append(i)  # A에 B-A 차집합이 더해진 결과가 들어간다. 
+    else:
+        a_temp.remove(i)  # 차집합 A-B만 남게 된다. 
+
+# 결과
+print(sorted(a_result))  # A + B
+
+# =======> 다중집합의 교집합
+a = [1, 2, 2, 3, 4, 5]
+b = [1, 1, 2, 3, 4, 6]
+
+result = []
+
+# 서로 있으면 a에만 제거 후 그 값을 result에 추가
+for i in b:
+    if i in a:
+        a.remove(i)
+        result.append(i)
+print(result)
+
 ```
