[2022-05-04] 프로그래머스 Lv2

--- a/[--]문제집 풀이/[09]수학/[09]수학-문제핵심정리.md
+++ b/[--]문제집 풀이/[09]수학/[09]수학-문제핵심정리.md
@@ -10,7 +10,7 @@
 4) 아직 모든 수를 지우지 않았다면, 다시 2번 단계로 간다.
 
 ```python
-# 에라토스테네스의 체
+# 에라토스테네스의 체 (소수 판별 리스트)
 def find_prime_number(M, N):
     array = [True] * (N + 1)
 
@@ -22,7 +22,54 @@ def find_prime_number(M, N):
     return [x for x in range(2, N + 1) if array[x]]
 ```
 
+## 메모리 제한이 걸린 경우에서의 소수 판별
+```python
+import math
+def is_prime_number(x):
+    #2부터 x의 제곱근까지의 모든 수를 확인하며
+    for i in range(2, int(math.sqrt(x))+1):
+        #x가 해당 수로 나누어 떨어진다면
+        if x % i == 0:
+            return False # 소수가 아님
+    return True # 소수임
+```
+
 <br />
+
+## 진법변환코드(10진-N진)
+
+```python
+import string
+
+tmp = string.digits + string.ascii_lowercase
+
+
+def convert(num, base):
+    q, r = divmod(num, base)
+    if q == 0:
+        return tmp[r]
+    else:
+        return convert(q, base) + tmp[r]
+```
+
+<br />
+
+## 10진법 이하 진법변환
+- 10진수 -> k진수 변환 (진법)
+```python
+def convert(n, k):
+    result = ''
+
+    while n > 0:
+        n, mod = divmod(n, k)
+        result += str(mod)
+
+    return result[::-1]
+```
+
+<br />
+
+
 
 ## GCD, LCM
 
@@ -81,24 +128,6 @@ arr = [1, 1, 1, 0, 0]
 
 arr = list(set(arr))  # [0, 1]
 arr = list(defaultdict.fromkeys(arr))  # [1, 0]
-```
-
-<br />
-
-## 진법변환코드(10진-N진)
-
-```python
-import string
-
-tmp = string.digits + string.ascii_lowercase
-
-
-def convert(num, base):
-    q, r = divmod(num, base)
-    if q == 0:
-        return tmp[r]
-    else:
-        return convert(q, base) + tmp[r]
 ```
 
 <br />
