--- a/[00]content/[09-2] 구현 핵심(2).md
+++ b/[00]content/[09-2] 구현 핵심(2).md
@@ -819,4 +819,22 @@ def solution(n, weak, dist):
 
 - - -
 
+## COS PRO 달팽이 배열 만들기
+
+```python
+    # 달팽이 배열 만들기
+    for i in range(1, n * n + 1):
+        arr[x][y] = i
+
+        if not (0 <= x + dx[d] < n and 0 <= y + dy[d] < n) or arr[x + dx[d]][y + dy[d]]:  # 범위 내가 아니거나 이동지역에 이미 숫자가 있다면
+            d = (d + 1) % 4
+            x += dx[d]
+            y += dy[d]
+
+        else:
+            x += dx[d]
+            y += dy[d]
+
+```
+
 
